// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`progress-ring/presenters/ProgressRingPresenter renders with all props 1`] = `
.emotion-17 {
  font-family: ArtifaktElement;
  line-height: 1.6;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  fill: rgba(0,0,0,0.05);
}

.emotion-1 {
  opacity: 0;
}

.emotion-1:nth-of-type(even) {
  fill: #007fc6;
}

.emotion-1:nth-of-type(odd) {
  fill: #38abdf;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={33}
  className="emotion-17"
  role="progressbar"
>
  <svg
    height={28}
    version="1.1"
    viewBox="0 0 28 28"
    width={28}
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <path
      className="emotion-0"
      d="M22.49 5.51 L14 2 L5.51 5.51 L2 14 L5.51 22.49 L14 26 L22.49 22.49 L26 14 ZM19.42 19.42 L14 21.67 L8.58 19.42 L6.33 14 L8.58 8.58 L14 6.33 L19.42 8.58 L21.67 14"
    />
    <path
      className="emotion-1"
      d="M5.52 5.52 L14 6.33 L14 2"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M5.52 5.52 L8.58 8.58 L14 6.33"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M2 14 L8.58 8.58 L5.52 5.52"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M2 14 L6.33 14 L8.58 8.58"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M5.52 22.48 L6.33 14 L2 14"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M5.52 22.48 L8.58 19.42 L6.33 14"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M14 26 L8.58 19.42 L5.52 22.48"
      fillRule="nonzero"
    />
    <path
      className="hig__progress-ring__segment emotion-1"
      d="M14 26 L14 21.67 L8.58 19.42"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M22.48 22.48 L14 21.67 L14 26"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M22.48 22.48 L19.42 19.42 L14 21.67"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M26 14 L19.42 19.42 L22.48 22.48"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M26 14 L21.67 14 L19.42 19.42"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M22.48 5.52 L21.67 14 L26 14"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M22.48 5.52 L19.42 8.58 L21.67 14"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M14 2 L19.42 8.58 L22.48 5.52"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M14 2 L14 6.33 L19.42 8.58"
      fillRule="nonzero"
    />
  </svg>
</div>
`;

exports[`progress-ring/presenters/ProgressRingPresenter renders with both surface & mask props 1`] = `
.emotion-21 {
  font-family: ArtifaktElement;
  line-height: 1.6;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  fill: rgba(0,0,0,0.05);
}

.emotion-1 {
  opacity: 0;
}

.emotion-1:nth-of-type(even) {
  fill: #007fc6;
}

.emotion-1:nth-of-type(odd) {
  fill: #38abdf;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={33}
  className="emotion-21"
  role="progressbar"
>
  <svg
    height={72}
    version="1.1"
    viewBox="0 0 72 72"
    width={72}
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <path
      className="emotion-0"
      d="M54.81 10.11 L36 4 L17.19 10.11 L5.57 26.11 L5.57 45.89 L17.19 61.89 L36 68 L54.81 61.89 L66.43 45.89 L66.43 26.11 ZM60.43 43.94 L51.1 56.78 L36 61.69 L20.9 56.78 L11.57 43.94 L11.57 28.06 L20.9 15.22 L36 10.31 L51.1 15.22 L60.43 28.07"
    />
    <path
      className="emotion-1"
      d="M36 10.31 L36 4 L17.19 10.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M36 10.31 L17.19 10.11 L20.9 15.215"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 15.215 L17.19 10.11 L5.565 26.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 15.215 L5.565 26.11 L11.565 28.06"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 28.06 L5.565 26.11 L5.565 45.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 28.06 L5.565 45.89 L11.565 43.94"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 43.94 L5.565 45.89 L17.19 61.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 43.94 L17.19 61.89 L20.9 56.785"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 56.785 L17.19 61.89 L36 68"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 56.785 L36 68 L36 61.69"
      fillRule="nonzero"
    />
    <path
      className="hig__progress-ring__segment emotion-1"
      d="M36 61.69 L36 68 L54.81 61.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M36 61.69 L54.81 61.89 L51.1 56.785"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 56.785 L54.81 61.89 L66.435 45.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 56.785 L66.435 45.89 L60.435 43.94"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 43.94 L66.435 45.89 L66.435 26.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 43.94 L66.435 26.11 L60.435 28.06"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 28.06 L66.435 26.11 L54.81 10.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 28.06 L54.81 10.11 L51.1 15.215"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 15.215 L54.81 10.11 L36 4"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 15.215 L36 4 L36 10.31"
      fillRule="nonzero"
    />
  </svg>
</div>
`;

exports[`progress-ring/presenters/ProgressRingPresenter renders with mask prop 1`] = `
.emotion-21 {
  font-family: ArtifaktElement;
  line-height: 1.6;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  fill: rgba(0,0,0,0.05);
}

.emotion-1 {
  opacity: 0;
}

.emotion-1:nth-of-type(even) {
  fill: #007fc6;
}

.emotion-1:nth-of-type(odd) {
  fill: #38abdf;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={33}
  className="emotion-21"
  role="progressbar"
>
  <svg
    height={72}
    version="1.1"
    viewBox="0 0 72 72"
    width={72}
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <path
      className="emotion-0"
      d="M54.81 10.11 L36 4 L17.19 10.11 L5.57 26.11 L5.57 45.89 L17.19 61.89 L36 68 L54.81 61.89 L66.43 45.89 L66.43 26.11 ZM60.43 43.94 L51.1 56.78 L36 61.69 L20.9 56.78 L11.57 43.94 L11.57 28.06 L20.9 15.22 L36 10.31 L51.1 15.22 L60.43 28.07"
    />
    <path
      className="emotion-1"
      d="M36 10.31 L36 4 L17.19 10.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M36 10.31 L17.19 10.11 L20.9 15.215"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 15.215 L17.19 10.11 L5.565 26.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 15.215 L5.565 26.11 L11.565 28.06"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 28.06 L5.565 26.11 L5.565 45.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 28.06 L5.565 45.89 L11.565 43.94"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 43.94 L5.565 45.89 L17.19 61.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 43.94 L17.19 61.89 L20.9 56.785"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 56.785 L17.19 61.89 L36 68"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 56.785 L36 68 L36 61.69"
      fillRule="nonzero"
    />
    <path
      className="hig__progress-ring__segment emotion-1"
      d="M36 61.69 L36 68 L54.81 61.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M36 61.69 L54.81 61.89 L51.1 56.785"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 56.785 L54.81 61.89 L66.435 45.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 56.785 L66.435 45.89 L60.435 43.94"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 43.94 L66.435 45.89 L66.435 26.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 43.94 L66.435 26.11 L60.435 28.06"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 28.06 L66.435 26.11 L54.81 10.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 28.06 L54.81 10.11 L51.1 15.215"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 15.215 L54.81 10.11 L36 4"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 15.215 L36 4 L36 10.31"
      fillRule="nonzero"
    />
  </svg>
</div>
`;

exports[`progress-ring/presenters/ProgressRingPresenter renders with surface prop 1`] = `
.emotion-21 {
  font-family: ArtifaktElement;
  line-height: 1.6;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  fill: rgba(0,0,0,0.05);
}

.emotion-1 {
  opacity: 0;
}

.emotion-1:nth-of-type(even) {
  fill: #007fc6;
}

.emotion-1:nth-of-type(odd) {
  fill: #38abdf;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow={33}
  className="emotion-21"
  role="progressbar"
>
  <svg
    height={72}
    version="1.1"
    viewBox="0 0 72 72"
    width={72}
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <path
      className="emotion-0"
      d="M54.81 10.11 L36 4 L17.19 10.11 L5.57 26.11 L5.57 45.89 L17.19 61.89 L36 68 L54.81 61.89 L66.43 45.89 L66.43 26.11 ZM60.43 43.94 L51.1 56.78 L36 61.69 L20.9 56.78 L11.57 43.94 L11.57 28.06 L20.9 15.22 L36 10.31 L51.1 15.22 L60.43 28.07"
    />
    <path
      className="emotion-1"
      d="M36 10.31 L36 4 L17.19 10.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M36 10.31 L17.19 10.11 L20.9 15.215"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 15.215 L17.19 10.11 L5.565 26.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 15.215 L5.565 26.11 L11.565 28.06"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 28.06 L5.565 26.11 L5.565 45.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 28.06 L5.565 45.89 L11.565 43.94"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 43.94 L5.565 45.89 L17.19 61.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 43.94 L17.19 61.89 L20.9 56.785"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 56.785 L17.19 61.89 L36 68"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 56.785 L36 68 L36 61.69"
      fillRule="nonzero"
    />
    <path
      className="hig__progress-ring__segment emotion-1"
      d="M36 61.69 L36 68 L54.81 61.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M36 61.69 L54.81 61.89 L51.1 56.785"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 56.785 L54.81 61.89 L66.435 45.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 56.785 L66.435 45.89 L60.435 43.94"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 43.94 L66.435 45.89 L66.435 26.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 43.94 L66.435 26.11 L60.435 28.06"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 28.06 L66.435 26.11 L54.81 10.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 28.06 L54.81 10.11 L51.1 15.215"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 15.215 L54.81 10.11 L36 4"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 15.215 L36 4 L36 10.31"
      fillRule="nonzero"
    />
  </svg>
</div>
`;

exports[`progress-ring/presenters/ProgressRingPresenter renders without props 1`] = `
.emotion-21 {
  font-family: ArtifaktElement;
  line-height: 1.6;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  fill: rgba(0,0,0,0.05);
}

.emotion-1 {
  opacity: 0;
}

.emotion-1:nth-of-type(even) {
  fill: #007fc6;
}

.emotion-1:nth-of-type(odd) {
  fill: #38abdf;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  className="emotion-21"
  role="progressbar"
>
  <svg
    height={72}
    version="1.1"
    viewBox="0 0 72 72"
    width={72}
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <path
      className="emotion-0"
      d="M54.81 10.11 L36 4 L17.19 10.11 L5.57 26.11 L5.57 45.89 L17.19 61.89 L36 68 L54.81 61.89 L66.43 45.89 L66.43 26.11 ZM60.43 43.94 L51.1 56.78 L36 61.69 L20.9 56.78 L11.57 43.94 L11.57 28.06 L20.9 15.22 L36 10.31 L51.1 15.22 L60.43 28.07"
    />
    <path
      className="emotion-1"
      d="M36 10.31 L36 4 L17.19 10.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M36 10.31 L17.19 10.11 L20.9 15.215"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 15.215 L17.19 10.11 L5.565 26.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 15.215 L5.565 26.11 L11.565 28.06"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 28.06 L5.565 26.11 L5.565 45.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 28.06 L5.565 45.89 L11.565 43.94"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 43.94 L5.565 45.89 L17.19 61.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M11.565 43.94 L17.19 61.89 L20.9 56.785"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 56.785 L17.19 61.89 L36 68"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M20.9 56.785 L36 68 L36 61.69"
      fillRule="nonzero"
    />
    <path
      className="hig__progress-ring__segment emotion-1"
      d="M36 61.69 L36 68 L54.81 61.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M36 61.69 L54.81 61.89 L51.1 56.785"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 56.785 L54.81 61.89 L66.435 45.89"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 56.785 L66.435 45.89 L60.435 43.94"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 43.94 L66.435 45.89 L66.435 26.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 43.94 L66.435 26.11 L60.435 28.06"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 28.06 L66.435 26.11 L54.81 10.11"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M60.435 28.06 L54.81 10.11 L51.1 15.215"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 15.215 L54.81 10.11 L36 4"
      fillRule="nonzero"
    />
    <path
      className="emotion-1"
      d="M51.1 15.215 L36 4 L36 10.31"
      fillRule="nonzero"
    />
  </svg>
</div>
`;
